# photo-editor

./: Cargo.toml  README.md  rustfmt.toml
frontend/: nuxt.config.js  package-lock.json  package.json
frontend/components/: ImageUploader.vue  Toolbar.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
src/: api.rs  config.rs  db.rs  main.rs
src/api/: api.rs  api_images.rs  api_sessions.rs  api_users.rs  images.rs  layers.rs  mod.rs  sessions.rs  users.rs
src/db/: db.rs  images.rs  layers.rs  mod.rs  sessions.rs  users.rs
src/image_processing/: draw.rs  filter.rs  mod.rs  selection.rs  transform.rs
src/tests/: integration_test.rs
