[package]
name = "photoshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
postgres = "0.19.7"
dotenv = "0.15.0"
actix-web = "4.4.0"
deadpool-postgres = "0.12.1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = [ "with-chrono" ]}
deadpool = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
serde_json = "1.0"